Fixed whiteboard left sidebar overflow

--- a/app/javascript/components/whiteboard/whiteboard.scss
+++ b/app/javascript/components/whiteboard/whiteboard.scss
@@ -3,5 +3,4 @@
 }
 .sidebar {
   height: 80vh;
-  overflow-y: auto;
 }
